fixup! fixup! corrected spacings

--- a/landing-pages/site/assets/scss/_docs.scss
+++ b/landing-pages/site/assets/scss/_docs.scss
@@ -3336,7 +3336,14 @@
     padding: 9px 10px;
     line-height: 24px;
     margin-bottom: 24px;
-    background: #e7f2fa
+    background: #e7f2fa;
+  }
+
+  @media (max-width: 768px) {
+    .rst-content .admonition p:not(.admonition-title) {
+      font-size: 12px;
+      line-height: 1.83;
+    }
   }
 
   .wy-alert-title, .rst-content .admonition-title {
@@ -5228,7 +5235,8 @@
       width: auto
     }
     .wy-nav-content-wrap {
-      margin-left: 0
+      margin-left: 0;
+      margin-right: 0;
     }
     .wy-nav-content-wrap .wy-nav-content {
       padding: 1.618em
@@ -5979,6 +5987,10 @@
     width: 280px;
     font-size: 14px;
     line-height: 1.43;
+
+    @media (max-width: 1024px) {
+      display: none;
+    }
   }
 
   .wy-nav-side-toc .wy-side-scroll {
